Fixed some diagrams on mobile

--- a/static/style.css
+++ b/static/style.css
@@ -1,10 +1,41 @@
 /* Hero Layout */
 
+#compare-caption {
+    grid-column: kicker;
+    border-top: solid 1px rgba(0, 0, 0, 0.1);
+    padding-top: 1rem;
+    margin-top: 0;
+  }
+  #compare-figure {
+    border-top: solid 1px rgba(0, 0, 0, 0.1);
+    padding-top: 1rem;
+    margin-top: 0;
+  }
+  #compare_play_button {
+    margin-left: 20px;
+    padding: 0 8px;
+    background-color: rgba(255, 130, 0);
+    border-radius: 4px;
+    border: none;
+    color: white;
+    height: 32px;
+    font-size: 13px;
+    text-transform: uppercase;
+    width: 100px;
+  }
+  #compare_play_button[disabled] {
+    opacity: 0.5;
+  }
+
+d-title {
+    padding-bottom: .5rem;
+}
+
 figure#compare-figure {
     grid-column: text;
     display: grid;
     grid-column-gap: inherit;
-    grid-template-columns: repeat(3, minmax(100px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));
     margin-bottom: 0;
 }
 
@@ -14,19 +45,39 @@ figure#compare-figure {
 }
 
 #compare-figure h4 {
+    margin: 0 0 .5em 0;
+}
+
+#compare-figure d-math span.katex-display {
+    padding: 0;
     margin: 0;
 }
 
 #cliffworld-mc > div {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: auto auto;
-    grid-column-gap: 20px;
-    grid-row-gap: 10px;
-    grid-auto-flow: column;
-  }
+    grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));
+    grid-gap: 20px;
+}
+
+
+figure figcaption,
+figure .figcaption {
+  margin-bottom: 1em;
+}
 
 /* Pre-existing CSS */
+
+#cliffworld-td {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));
+    grid-gap: 20px;
+  }
+
+  #cliffworld-trajectories {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));
+    grid-gap: 20px;
+  }
 
 #cliff_iter .cell rect {
     fill: #e7eae7;
@@ -36,12 +87,13 @@ figure#compare-figure {
   }
 
 .eq-grid {
+  grid-column: text-start / end;
   padding: 10px;
-  padding-left: 20px;
   display: grid;
   justify-content: start;
   grid-row-gap: 10px;
-  margin-bottom: 10px;
+  overflow-x: scroll;
+  margin-bottom: 1em;
 }
 .eq-grid d-math {
   font-size: 120%;
